--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -59,6 +59,7 @@ x-airflow-common:
     _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:-}
     # exercise enviroment setup
     AIRFLOW_CONN_TEST_DB: ${CONN_TEST_DB}
+    AIRFLOW_CONN_DWH: ${CONN_DWH}
     AIRFLOW_CONN_EXCHANGERATE_HOST_API: ${CONN_EXCHANGERATE_HOST_API}
     AIRFLOW_VAR_EXCHANGERATE_HOST_PAIR: ${VAR_EXCHANGERATE_HOST_PAIR}
     AIRFLOW_VAR_EXCHANGERATE_HOST_HISTORY_LOAD: ${VAR_EXCHANGERATE_HOST_HISTORY_LOAD}
