--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,7 +24,7 @@
 # The following variables are supported:
 #
 # AIRFLOW_IMAGE_NAME           - Docker image name used to run Airflow.
-#                                Default: apache/airflow:2.3.3
+#                                Default: apache/airflow:2.4.1
 # AIRFLOW_UID                  - User ID in Airflow containers
 #                                Default: 50000
 # Those configurations are useful mostly in case of standalone testing/running Airflow in test/try-out mode
@@ -44,7 +44,7 @@ x-airflow-common:
   # In order to add custom dependencies or upgrade provider packages you can use your extended image.
   # Comment the image line, place your Dockerfile in the directory where you placed the docker-compose.yaml
   # and uncomment the "build" line below, Then run `docker-compose build` to build the images.
-  image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.3.3}
+  image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.3.4-python3.8}
   # build: .
   environment:
     &airflow-common-env
@@ -56,20 +56,13 @@ x-airflow-common:
     AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION: 'true'
     AIRFLOW__CORE__LOAD_EXAMPLES: 'false'
     AIRFLOW__API__AUTH_BACKENDS: 'airflow.api.auth.backend.basic_auth'
-    _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:-}
-    # exercise enviroment setup
-    AIRFLOW_CONN_TEST_DB: ${CONN_TEST_DB}
+#    _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:-}
+    # exercise environment setup
     AIRFLOW_CONN_DWH: ${CONN_DWH}
-    AIRFLOW_CONN_EXCHANGERATE_HOST_API: ${CONN_EXCHANGERATE_HOST_API}
-    AIRFLOW_VAR_EXCHANGERATE_HOST_PAIR: ${VAR_EXCHANGERATE_HOST_PAIR}
-    AIRFLOW_VAR_EXCHANGERATE_HOST_HISTORY_LOAD: ${VAR_EXCHANGERATE_HOST_HISTORY_LOAD}
-    AIRFLOW_VAR_EXCHANGERATE_HOST_HISTORY_START: ${VAR_EXCHANGERATE_HOST_HISTORY_START}
-    AIRFLOW_VAR_FILE_STORAGE_MOUNT_POINT: ${VAR_FILE_STORAGE_MOUNT_POINT}
   volumes:
     - ./dags:/opt/airflow/dags
     - ./logs:/opt/airflow/logs
     - ./plugins:/opt/airflow/plugins
-    - ./storage:${VAR_FILE_STORAGE_MOUNT_POINT}
   user: "${AIRFLOW_UID:-50000}:0"
   depends_on:
     &airflow-common-depends-on
@@ -77,7 +70,7 @@ x-airflow-common:
       condition: service_healthy
 
 services:
-  # exercise enviroment setup
+  # exercise environment setup
   dwh:
    build: .
    ports:
@@ -89,7 +82,7 @@ services:
     nofile:
      soft: 262144
      hard: 262144
-  
+
   postgres:
     image: postgres:13
     environment:
@@ -175,7 +168,7 @@ services:
           echo "If you are on Linux, you SHOULD follow the instructions below to set "
           echo "AIRFLOW_UID environment variable, otherwise files will be owned by root."
           echo "For other operating systems you can get rid of the warning with manually created .env file:"
-          echo "    See: https://airflow.apache.org/docs/apache-airflow/stable/start/docker.html#setting-the-right-airflow-user"
+          echo "    See: https://airflow.apache.org/docs/apache-airflow/stable/howto/docker-compose/index.html#setting-the-right-airflow-user"
           echo
         fi
         one_meg=1048576
@@ -208,11 +201,11 @@ services:
           echo
           echo -e "\033[1;33mWARNING!!!: You have not enough resources to run Airflow (see above)!\e[0m"
           echo "Please follow the instructions to increase amount of resources available:"
-          echo "   https://airflow.apache.org/docs/apache-airflow/stable/start/docker.html#before-you-begin"
+          echo "   https://airflow.apache.org/docs/apache-airflow/stable/howto/docker-compose/index.html#before-you-begin"
           echo
         fi
-        mkdir -p /sources/logs /sources/dags /sources/plugins /sources/storage
-        chown -R "${AIRFLOW_UID}:0" /sources/{logs,dags,plugins,storage}
+        mkdir -p /sources/logs /sources/dags /sources/plugins
+        chown -R "${AIRFLOW_UID}:0" /sources/{logs,dags,plugins}
         exec /entrypoint airflow version
     # yamllint enable rule:line-length
     environment:
