--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -42,10 +42,13 @@ version: '3'
 x-airflow-common:
   &airflow-common
   # In order to add custom dependencies or upgrade provider packages you can use your extended image.
-  # Comment the image line, place your Dockerfile in the directory where you placed the docker-compose.yaml
+  # Comment the image line, place your clickhouse.airflow.Dockerfile in the directory where you placed the docker-compose.yaml
   # and uncomment the "build" line below, Then run `docker-compose build` to build the images.
-  image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.3.4-python3.8}
-  # build: .
+#  image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.3.4-python3.8}
+#  image: ${AIRFLOW_IMAGE_NAME:-extended_airflow:latest}
+  build:
+    context: .
+    dockerfile: airflow.Dockerfile
   environment:
     &airflow-common-env
     AIRFLOW__CORE__EXECUTOR: LocalExecutor
@@ -59,6 +62,7 @@ x-airflow-common:
 #    _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:-}
     # exercise environment setup
     AIRFLOW_CONN_DWH: ${CONN_DWH}
+    AIRFLOW_CONN_DATABRICKS: ${CONN_DATABRICKS}
   volumes:
     - ./dags:/opt/airflow/dags
     - ./logs:/opt/airflow/logs
@@ -72,7 +76,9 @@ x-airflow-common:
 services:
   # exercise environment setup
   dwh:
-   build: .
+   build:
+     context: .
+     dockerfile: clickhouse.Dockerfile
    ports:
    - "8123:8123"
    - "9000:9000"
