--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -47,9 +47,9 @@ x-airflow-common:
 #  image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.3.4-python3.8}
 #  image: ${AIRFLOW_IMAGE_NAME:-extended_airflow:latest}
   image: extended-airflow:latest
-  build:
-    context: .
-    dockerfile: airflow.Dockerfile
+#  build:
+#    context: .
+#    dockerfile: airflow.Dockerfile
   environment:
     &airflow-common-env
     AIRFLOW__CORE__EXECUTOR: LocalExecutor
@@ -64,10 +64,13 @@ x-airflow-common:
     # exercise environment setup
     AIRFLOW_CONN_DWH: ${CONN_DWH}
     AIRFLOW_CONN_DATABRICKS: ${CONN_DATABRICKS}
+    AIRFLOW_CONN_API_PROXY_FBS_EU: ${CONN_API_PROXY_FBS_EU}
+    AIRFLOW_CONN_API_PROXY_MY_FBS_COM: ${CONN_API_PROXY_MY_FBS_COM}
   volumes:
     - ./dags:/opt/airflow/dags
     - ./logs:/opt/airflow/logs
     - ./plugins:/opt/airflow/plugins
+    - ./keys:/opt/airflow/keys
   user: "${AIRFLOW_UID:-50000}:0"
   depends_on:
     &airflow-common-depends-on
@@ -78,9 +81,9 @@ services:
   # exercise environment setup
   dwh:
    image: extended-clickhouse:latest
-   build:
-     context: .
-     dockerfile: clickhouse.Dockerfile
+#   build:
+#     context: .
+#     dockerfile: clickhouse.Dockerfile
    ports:
    - "8123:8123"
    - "9000:9000"
@@ -212,8 +215,8 @@ services:
           echo "   https://airflow.apache.org/docs/apache-airflow/stable/howto/docker-compose/index.html#before-you-begin"
           echo
         fi
-        mkdir -p /sources/logs /sources/dags /sources/plugins
-        chown -R "${AIRFLOW_UID}:0" /sources/{logs,dags,plugins}
+        mkdir -p /sources/logs /sources/dags /sources/plugins /sources/keys
+        chown -R "${AIRFLOW_UID}:0" /sources/{logs,dags,plugins,keys}
         exec /entrypoint airflow version
     # yamllint enable rule:line-length
     environment:
