--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 apache-airflow-providers-databricks==3.3.0
+apache-airflow-providers-slack==5.1.0
 airflow-clickhouse-plugin==0.8.2
 dbt-core==1.3.0
 airflow-dbt==0.4.0
+gcsfs==2022.11.0
