development environment for databricks (advanced)

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -60,12 +60,13 @@ x-airflow-common:
     AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION: 'true'
     AIRFLOW__CORE__LOAD_EXAMPLES: 'false'
     AIRFLOW__API__AUTH_BACKENDS: 'airflow.api.auth.backend.basic_auth'
-#    _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:-}
+# _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:-}
     # exercise environment setup
     AIRFLOW_CONN_DWH: ${CONN_DWH}
     AIRFLOW_CONN_DATABRICKS: ${CONN_DATABRICKS}
     AIRFLOW_CONN_API_PROXY_FBS_EU: ${CONN_API_PROXY_FBS_EU}
     AIRFLOW_CONN_API_PROXY_MY_FBS_COM: ${CONN_API_PROXY_MY_FBS_COM}
+    AIRFLOW_CONN_SLACK_NOTIFICATION_ALARMS_FROM_DATABRICKS_EMARSYS: ${CONN_SLACK_NOTIFICATION_ALARMS_FROM_DATABRICKS_EMARSYS}
   volumes:
     - ./dags:/opt/airflow/dags
     - ./logs:/opt/airflow/logs
