bug fix for gcc

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -67,6 +67,7 @@ x-airflow-common:
     AIRFLOW_CONN_API_PROXY_FBS_EU: ${CONN_API_PROXY_FBS_EU}
     AIRFLOW_CONN_API_PROXY_MY_FBS_COM: ${CONN_API_PROXY_MY_FBS_COM}
     AIRFLOW_CONN_SLACK_NOTIFICATION_ALARMS_FROM_DATABRICKS_EMARSYS: ${CONN_SLACK_NOTIFICATION_ALARMS_FROM_DATABRICKS_EMARSYS}
+    AIRFLOW_CONN_SSH_DATA_INGESTION: ${CONN_SSH_DATA_INGESTION}
   volumes:
     - ./dags:/opt/airflow/dags
     - ./logs:/opt/airflow/logs
